2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* sound-properties-capplet.c: (main): Plug a leak.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-08  Deepa Natarajan  <deepa.natarajan@wipro.com>

	*sound-properties.glade: Remove mnemonics for notebook tabs.
	Fixes bug# 94160.

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* sound.desktop.in: Fix the desktop file so that it validates.

2002-07-31  Federico Mena Quintero  <federico@ximian.com>

	* sound-properties-capplet.c (main): Do not pass -1 for the dialog
	flags; just pass GTK_DIALOG_NO_SEPARATOR.  Fixes #89408 and #88614.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * sound-properties-capplet.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* sound-properties-capplet.c (dialog_button_clicked_cb) : Improve
	  handling of help failures.

Sun May 26 11:32:09 2002  Jonathan Blandford  <jrb@gnome.org>

	* sound-properties-capplet.c (main): use APPID instead of argv[0]

2002-05-08  Jody Goldberg <jody@gnome.org>

	* sound-properties-capplet.c (dialog_button_clicked_cb) : fix help path

2002-05-07  Jody Goldberg <jody@gnome.org>

	* sound-properties-capplet.c (main) : add help.