@@ -1,3 +1,8 @@
+2003-04-30  Alex Duggan  <aldug@astrolinux.com>
+
+	* sound-properties-capplet.c: use appropriate
+	window border icon.
+
 2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* sound-properties-capplet.c: (main): Plug a leak.
